--- a/src/cotacao.css
+++ b/src/cotacao.css
@@ -6,7 +6,7 @@
     right: 20px;
     width: 40%;
     height: 400px;
-    background-image: url('https://i.postimg.cc/DwBjX8D1/logo.png');
+    background-image: url('https://cdn.jsdelivr.net/gh/TuxyBR/messa-public@main/src/watermark.png');
     background-repeat: no-repeat;
     background-size: contain;
     opacity: 0.07;
