--- a/src/contrato/style.css
+++ b/src/contrato/style.css
@@ -149,7 +149,7 @@ table {
 }
 
 .botao {
-  padding: 8px 16px;
+  padding: 8px 12px;
   font-size: 13px;
   font-weight: bold;
   color: white;
@@ -162,7 +162,7 @@ table {
 }
 
 .botao:hover {
-  background-color: #4a4e52;
+  background-color: #3e5566 !important;
   transform: scale(1.02);
 }
 
@@ -390,4 +390,18 @@ input[type="date"]:disabled::-webkit-calendar-picker-indicator {
   flex:1;
   justify-content: center;
   align-items: center;
+}
+.toastify {
+  border-radius: 12px;
+}
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 9999;
+  display: none;
+  cursor: wait;
 }
