--- a/src/contrato/style.css
+++ b/src/contrato/style.css
@@ -7,6 +7,23 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
 }
+
+.marca-dagua {
+  display: none;
+  position: fixed;
+  top: 10px;
+  right: 20px;
+  width: 40%;
+  height: 400px;
+  background-image: url("https://cdn.jsdelivr.net/gh/TuxyBR/messa-public@main/src/watermark.png") !important;
+  background-repeat: no-repeat;
+  background-size: contain;
+  opacity: 0.07;
+  pointer-events: none;
+  z-index: 0;
+  margin-top: 0px;
+}
+
 @media print {
   body {
     margin: 1cm;
@@ -20,18 +37,6 @@
 
   .marca-dagua {
     display: block;
-    position: fixed;
-    top: 10px;
-    right: 20px;
-    width: 40%;
-    height: 400px;
-    background-image: url("https://cdn.jsdelivr.net/gh/TuxyBR/messa-public@main/src/watermark.png") !important;
-    background-repeat: no-repeat;
-    background-size: contain;
-    opacity: 0.07;
-    pointer-events: none;
-    z-index: 0;
-    margin-top: 0px;
   }
 
   .hideInPrint {
